--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
         - docker build -t vpmaddur/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-        - docker run vpmaddur/react-test npm test -- --coverage
+        - docker run -e CI=true vpmaddur/react-test npm test -- --coverage
 
 after_success:
         - docker build -t vpmaddur/multi-client ./client
