--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ script:
 
 after_success:
         - docker build -t vpmaddur/multi-client ./client
-        - docker build -t vpmaddur/multi-nginx ./ngnix
+        - docker build -t vpmaddur/multi-nginx ./nginx
         - docker build -t vpmaddur/multi-server ./server
         - docker build -t vpmaddur/multi-worker ./worker
         # Log in to docker CLI
 
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+        - echo "$DOCKER_PASSWORD" | docker login docker.io -u "$DOCKER_ID" --password-stdin
         - docker push vpmaddur/multi-client
         - docker push vpmaddur/multi-nginx
         - docker push vpmaddur/multi-server
