--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ services:
         - docker
 
 before_install:
-        - docker build -t vpmaddur/react-test -f ./client/Dockerfile.dev ./client
+        - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
+        - curl https://sdk.cloud.google.com | bash > /dev/null;
+        - source $HOME/google-cloud-sdk/path.bash.inc
+        - gcloud components update kubectl
+        - gcloud auth activate-service-account --key-file service-account.json
 
 script:
         - docker run -e CI=true vpmaddur/react-test npm test -- --coverage
