--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo:  required
 services:
         - docker
+env:
+        global:
+                - SHA=$(git rev-parse HEAD)
+                - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
         - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
@@ -8,37 +12,17 @@ before_install:
         - source $HOME/google-cloud-sdk/path.bash.inc
         - gcloud components update kubectl
         - gcloud auth activate-service-account --key-file service-account.json
+        - gcloud config set project jenkins-248921
+        - gcloud config set compute/zone us-central1-a
+        - gcloud container clusters get-credentials multi-cluster
+        - echo "$DOCKER_PASSWORD" | docker login docker.io -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t vpmaddur/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-        - docker run -e CI=true vpmaddur/react-test npm test -- --coverage
-
-after_success:
-        - docker build -t vpmaddur/multi-client ./client
-        - docker build -t vpmaddur/multi-nginx ./nginx
-        - docker build -t vpmaddur/multi-server ./server
-        - docker build -t vpmaddur/multi-worker ./worker
-        # Log in to docker CLI
-
-        - echo "$DOCKER_PASSWORD" | docker login docker.io -u "$DOCKER_ID" --password-stdin
-
-        # Push Images into Repository
-
-        - docker push vpmaddur/multi-client
-        - docker push vpmaddur/multi-nginx
-        - docker push vpmaddur/multi-server
-        - docker push vpmaddur/multi-worker 
+        - docker run -e CI=true vpmaddur/react-test npm test
 
 deploy:
-        provider: elasticbeanstalk
-        region: "us-east-2"
-        app: "multi-docker"
-        env: "MultiDocker-env"
-        bucket_name: "elasticbeanstalk-us-east-2-380706206106"
-        bucket_path: "docker-multi"
+        provider: script
+        script: bash ./deploy.sh
         on:
                 branch: master
-        access_key_id:
-                secure: $AWS_ACCESS_KEY
-        secret_access_key:
-                secure: $AWS_SECRET_KEY
-
